Enhance CI workflow with better DMG creation error handling
- Add binary verification before DMG creation to catch issues early
- Call DMG script directly instead of through make to avoid dependency conflicts
- Add detailed debugging output for troubleshooting
- Maintain error handling and cleanup on failure

This works together with the DMG script fix to ensure pre-built binaries
from parallel CI jobs are properly used instead of being overwritten.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -425,7 +425,7 @@ jobs:
         
         echo "✅ Both binaries found, creating DMG..."
         
-        # Create DMG directly via script (skip make dependencies that rebuild)
+        # Create DMG directly via script (avoids make dependencies that rebuild)
         if ! ./installer/build-scripts/create-dmg.sh; then
           echo "❌ DMG creation failed"
           echo "📁 Current releases directory:"
